@@ -1,5 +1,5 @@
 /*
- * "$Id: serial.c,v 1.32.2.14 2003/01/07 18:26:15 mike Exp $"
+ * "$Id: serial.c,v 1.32.2.15 2003/08/30 23:12:59 mike Exp $"
  *
  *   Serial port backend for the Common UNIX Printing System (CUPS).
  *
@@ -508,6 +508,9 @@ main(int  argc,		/* I - Number of command-line arguments (6 or 7) */
 	bufptr += wbytes;
       }
 
+      if (wbytes < 0)
+        break;
+
       if (argc > 6)
 	fprintf(stderr, "INFO: Sending print file, %lu bytes...\n",
 	        (unsigned long)tbytes);
@@ -987,5 +990,5 @@ list_devices(void)
 
 
 /*
- * End of "$Id: serial.c,v 1.32.2.14 2003/01/07 18:26:15 mike Exp $".
+ * End of "$Id: serial.c,v 1.32.2.15 2003/08/30 23:12:59 mike Exp $".
  */
