@@ -1,5 +1,5 @@
 /*
- * "$Id: client.c,v 1.91.2.67 2003/08/01 20:09:19 mike Exp $"
+ * "$Id: client.c,v 1.91.2.68 2003/08/30 23:13:01 mike Exp $"
  *
  *   Client routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -1519,6 +1519,20 @@ ReadClient(client_t *con)	/* I - Client to read from */
 
 	      break;
             }
+	    else if (atoi(con->http.fields[HTTP_FIELD_CONTENT_LENGTH]) < 0)
+	    {
+	     /*
+	      * Negative content lengths are invalid!
+	      */
+
+              if (!SendError(con, HTTP_BAD_REQUEST))
+	      {
+		CloseClient(con);
+		return (0);
+	      }
+
+	      break;
+	    }
 
            /*
 	    * Open a temporary file to hold the request...
@@ -3363,5 +3377,5 @@ CDSAWriteFunc(SSLConnectionRef connection,	/* I  - SSL/TLS connection */
 
 
 /*
- * End of "$Id: client.c,v 1.91.2.67 2003/08/01 20:09:19 mike Exp $".
+ * End of "$Id: client.c,v 1.91.2.68 2003/08/30 23:13:01 mike Exp $".
  */
